--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,4 +4,14 @@
 
 {% block content %}
 
+<div class="container-fluid">
+  <form action="{{ url_for('edit', transaction_id=transaction.id) }}" method="post">
+    {{ form.hidden_tag() }}
+    <div class="row">
+      <h3>Edit Transaction</h3>
+
+    </div>
+  </form>
+</div>
+
 {% endblock %}
